# llm_rag_lecture

./: PROJECT_MANAGEMENT.md  README_Educational_FAISS.md  README_FAISS_RAG_System.md  README_FAISS_Separated.md  README_SimpleRAG_LangGraph.md  basic_llm_1.py  basic_llm_local_model.py  educational_faiss_system.py  faiss_index_builder.py  faiss_rag_memory_system.py  faiss_rag_system.py  faiss_search_engine.py  improved_technical_analysis_results.txt  llm_LCEL_chain_gemini.md  llm_LCEL_chain_gemini.py  llm_RunnableParallel_gemini.md  llm_RunnableParallel_gemini.py  llm_gemini_image_make.py  llm_image_describe.py  llm_prompt_templates_gemini.py  llm_prompttemplates_gemini.md  main.py  pyproject.toml  run_educational_example.py  setup_gemini_api.py  simple_rag_langgraph.py  technical_analysis_results.txt  test_educational_system.py  test_rag_system.py  troubleshoot.py
DocumentsLoader/: PDFLoader_stock.py  README_FAISS_System.md  README_PDF_Processing.md  WebBasedLoader_Basic.py  WebBasedLoader_Sock.py  complete_faiss_system.py  faiss_hnsw_indexing_system.py  process_technical_analysis_pdf.py  process_technical_analysis_pdf_improved.py  simple_faiss_test.py
DocumentsLoader/educational_faiss_index/: index.faiss  index.pkl
DocumentsLoader/faiss_index/: index.faiss  index.pkl
DocumentsLoader/faiss_index_complete/: index.faiss  index.pkl
DocumentsLoader/rag_results/: rag_results_20250804_160639.json  rag_results_20250804_160854.json  rag_results_20250804_160923.json
DocumentsLoader/search_results/: search_results_20250804_153232.json  (+3 more)
conversation_memory/: chroma.sqlite3
