[project]
name = "llm-rag-lecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "beautifulsoup4>=4.13.4",
    "bitsandbytes>=0.46.1",
    "blobfile>=3.0.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0.post1",
    "ipython>=9.4.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.1",
    "pypdf>=5.9.0",
    "pypdf2>=3.0.1",
    "safetensors>=0.5.3",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.54.1",
]
